--- a/FilRouge/Symfony/VillageGreen/.env
+++ b/FilRouge/Symfony/VillageGreen/.env
@@ -19,7 +19,7 @@ APP_SECRET=d700b67ab97b8bee592ba2fe3651b068
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
