--- a/FilRouge/SYMFONY/VillageGreen/config/packages/security.yaml
+++ b/FilRouge/SYMFONY/VillageGreen/config/packages/security.yaml
@@ -38,6 +38,10 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
+        - { path: ^/panier, roles: ROLE_USER }
+        - { path: ^/informations_client, roles: ROLE_USER }
+        - { path: ^/profil_client, roles: ROLE_USER }
+
 when@test:
     security:
         password_hashers:
